Made preserializer use List<string> instead of object as the serialization result

--- a/LifeArenaSharedTests/LifeArenaSharedTests.csproj
+++ b/LifeArenaSharedTests/LifeArenaSharedTests.csproj
@@ -7,7 +7,7 @@
 
         <IsPackable>false</IsPackable>
 
-        <RootNamespace>LifeArena.Shared.Tests</RootNamespace>
+        <RootNamespace>Avangardum.LifeArena.Shared.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
