--- a/LifeArenaShared/LifeArenaShared.csproj
+++ b/LifeArenaShared/LifeArenaShared.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>LifeArena.Shared</RootNamespace>
+        <RootNamespace>Avangardum.LifeArena.Shared</RootNamespace>
     </PropertyGroup>
 
 </Project>
